# adaptive-ode-framework-mvp

./: .gitignore  COMPREHENSIVE_TEST_REPORT.md  DEMO_GUIDE.md  README.md  SESSION_SUMMARY.md  TESTS_QUICK_REFERENCE.md  TEST_COVERAGE_SUMMARY.md  WEEK2_TESTING_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: WEEK2_DEMO_README.md  benchmark_demo.py  week1_demo.py  week2_demo.py  week3_demo.py
ode_framework/: __init__.py
ode_framework/adaptive/: __init__.py  adaptive_framework.py
ode_framework/benchmarks/: __init__.py  benchmark_problems.py
ode_framework/decision/: __init__.py  method_selector.py
ode_framework/diagnostics/: __init__.py  diagnostic_engine.py  statistical_tests.py  visualizations.py
ode_framework/metrics/: __init__.py  error_metrics.py
ode_framework/solvers/: __init__.py  base.py  classical.py  sindy_wrapper.py
ode_framework/tests/: __init__.py  test_diagnostics.py  test_metrics.py  test_solvers.py
ode_framework/utils/: __init__.py  test_problems.py
