[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ode-diagnostic-framework"
version = "0.1.0"
description = "Adaptive ODE solver framework with SINDy integration and diagnostic capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vaishnavi Raghupathi", email = "vaishnavi@example.com"}
]
keywords = ["ODE", "solvers", "SINDy", "adaptive", "numerical", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pysindy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.5",
    "sphinx-rtd-theme>=1.0",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "sphinx>=4.5",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/Vaishnavi-Raghupathi/adaptive-ode-framework"
Documentation = "https://adaptive-ode-framework.readthedocs.io"
Repository = "https://github.com/Vaishnavi-Raghupathi/adaptive-ode-framework.git"
"Bug Tracker" = "https://github.com/Vaishnavi-Raghupathi/adaptive-ode-framework/issues"

[tool.setuptools]
packages = ["ode_framework"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
ode_framework = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["ode_framework/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["ode_framework"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
